legend-pure-parser/examples/errors/05_missing_return_type.pure
###Pure

// ERROR: Missing return type on function signature
function model::errors::noReturn(x: String[1])
{
  $x + ' world'
}
